--- a/style.css
+++ b/style.css
@@ -47,3 +47,18 @@ footer{
     text-align: center;
     font-style: italic;
 }
+
+#gitlink{
+    color: white;
+    text-align: center;
+    font-style: italic;
+    margin: 5px;
+    text-decoration: none;
+}
+
+#gitimg{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    float: center;
+}
